--- a/fruitable/web/templates/shop-detail.html
+++ b/fruitable/web/templates/shop-detail.html
@@ -282,29 +282,33 @@
                         </div>
                     </div>
                 </div>
+
                 <h1 class="fw-bold mb-0">Related products</h1>
                 <div class="vesitable">
-                    <div class="owl-carousel vegetable-carousel">
+                    <div class="owl-carousel vegetable-carousel justify-content-center">
                         {% for related_product in related_products %}
-                            <a href="{% url 'product_detail' related_product.id %}">
-                                <div class="border border-primary rounded position-relative vesitable-item">
-                                    <div class="vesitable-img">
+                            <div class="border border-primary rounded position-relative vesitable-item">
+                                <div class="vesitable-img">
+                                    <a href="{% url 'product_detail' related_product.id %}">
                                         <img src="{{ related_product.product_image.url }}" class="img-fluid w-100 rounded-top" alt="{{ related_product.product_name }}">
-                                    </div>
-                                    <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">{{ related_product.product_category }}</div>
-                                    <div class="p-4 pb-0 rounded-bottom">
+                                    </a>
+                                </div>
+                                <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">{{ related_product.product_category }}</div>
+                                <div class="p-4 pb-0 rounded-bottom">
+                                    <a href="{% url 'product_detail' related_product.id %}">
                                         <h4>{{ related_product.product_name }}</h4>
-                                        <p>{{ related_product.product_description|truncatewords:10 }}</p>
-                                        <div class="d-flex justify-content-center flex-lg-wrap">
-                                            <p class="text-dark fs-5 fw-bold mb-3">Ksh. {{ related_product.product_price }} / kg</p>
-                                            <a href="{% url 'cart_add' related_product.id %}" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
-                                        </div>
+                                    </a>
+                                    <p>{{ related_product.product_description|truncatewords:10 }}</p>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <p class="text-dark fs-5 fw-bold">Sh.{{ related_product.product_price }} / kg</p>
+                                        <a href="{% url 'cart_add' related_product.id %}" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                     </div>
                                 </div>
-                            </a>
+                            </div>
                         {% endfor %}
                     </div>
                 </div>
+                
             </div>
         </div>
         <!-- Single Product End -->
