--- a/fruitable/web/templates/shop-detail.html
+++ b/fruitable/web/templates/shop-detail.html
@@ -134,24 +134,31 @@
                                         </div>
                                     </div>
                                     <div class="tab-pane" id="nav-mission" role="tabpanel" aria-labelledby="nav-mission-tab">
-                                        <div class="d-flex">
-                                            <img src="{% static 'img/avatar.jpg' %}" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
-                                            <div class="">
-                                                <p class="mb-2" style="font-size: 14px;">April 12, 2024</p>
-                                                <div class="d-flex justify-content-between">
-                                                    <h5>Jason Smith</h5>
-                                                    <div class="d-flex mb-3">
-                                                        <i class="fa fa-star text-secondary"></i>
-                                                        <i class="fa fa-star text-secondary"></i>
-                                                        <i class="fa fa-star text-secondary"></i>
-                                                        <i class="fa fa-star text-secondary"></i>
-                                                        <i class="fa fa-star"></i>
+                                        {% if reviews %}
+                                            {% for review in reviews %}
+                                                <div class="d-flex">
+                                                    <img src="{% static 'img/avatar.jpg' %}" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="Avatar">
+                                                    <div class="">
+                                                        <p class="mb-2" style="font-size: 14px;">{{ review.created_at|date:"F j, Y" }}</p>
+                                                        <div class="d-flex justify-content-between">
+                                                            <h5>{{ review.name }}</h5>
+                                                            <div class="d-flex mb-3">
+                                                                <i class="fa fa-star text-secondary"></i>
+                                                                <i class="fa fa-star text-secondary"></i>
+                                                                <i class="fa fa-star text-secondary"></i>
+                                                                <i class="fa fa-star text-secondary"></i>
+                                                                <i class="fa fa-star"></i>
+                                                            </div>
+                                                        </div>
+                                                        <p>{{ review.description }}</p>
                                                     </div>
                                                 </div>
-                                                <p>The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic 
-                                                    words etc. Susp endisse ultricies nisi vel quam suscipit </p>
+                                            {% endfor %}
+                                        {% else %}
+                                            <div class="d-flex justify-content-center">
+                                                <p><i class="fas fa-database"></i> No reviews found for this product</p>
                                             </div>
-                                        </div>
+                                        {% endif %}
                                         <div class="d-flex">
                                             <img src="{% static 'img/avatar.jpg' %}" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
                                             <div class="">
@@ -179,22 +186,32 @@
                                     </div>
                                 </div>
                             </div>
-                            <form action="#">
+                            <form method="post">
+                                {% csrf_token %}
                                 <h4 class="mb-5 fw-bold">Leave a Reply</h4>
                                 <div class="row g-4">
                                     <div class="col-lg-6">
                                         <div class="border-bottom rounded">
-                                            <input type="text" class="form-control border-0 me-4" placeholder="Yur Name *">
+                                            <input type="text" name="name" value="{{ form.name.value|default:'' }}" class="form-control border-0 me-4" placeholder="Your Name *">
+                                        </div>
+                                        <div class="text-danger">
+                                            {{ form.name.errors }}
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="border-bottom rounded">
-                                            <input type="email" class="form-control border-0" placeholder="Your Email *">
+                                            <input type="email" name="email" value="{{ form.email.value|default:'' }}" class="form-control border-0" placeholder="Your Email *">
+                                        </div>
+                                        <div class="text-danger">
+                                            {{ form.email.errors }}
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="border-bottom rounded my-4">
-                                            <textarea name="" id="" class="form-control border-0" cols="30" rows="8" placeholder="Your Review *" spellcheck="false"></textarea>
+                                            <textarea name="description" id="" class="form-control border-0" cols="30" rows="8" placeholder="Your Review *" spellcheck="false">{{ form.description.value|default:'' }}</textarea>
+                                        </div>
+                                        <div class="text-danger">
+                                            {{ form.description.errors }}
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
@@ -209,7 +226,7 @@
                                                     <i class="fa fa-star"></i>
                                                 </div>
                                             </div>
-                                            <a href="#" class="btn border border-secondary text-primary rounded-pill px-4 py-3"> Post Comment</a>
+                                            <button type="submit" class="btn border border-secondary text-primary rounded-pill px-4 py-3"> Post Comment</button>
                                         </div>
                                     </div>
                                 </div>
