getting featured products from the database

--- a/fruitable/web/templates/shop-detail.html
+++ b/fruitable/web/templates/shop-detail.html
@@ -254,8 +254,8 @@
                                                     <i class="fa fa-star"></i>
                                                 </div>
                                                 <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">{{ fruit.product_price }}Sh</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">100Sh</h5>
+                                                    <h5 class="fw-bold me-2">Sh{{ fruit.product_price }}</h5>
+                                                    <h5 class="text-danger text-decoration-line-through">Sh100</h5>
                                                 </div>
                                             </div>
                                         </div>
