--- a/fruitable/web/templates/shop.html
+++ b/fruitable/web/templates/shop.html
@@ -121,65 +121,35 @@
                                     </div>
                                     <div class="col-lg-12">
                                         <h4 class="mb-3">Featured products</h4>
-                                        <div class="d-flex align-items-center justify-content-start">
-                                            <div class="rounded me-4" style="width: 100px; height: 100px;">
-                                                <img src="{% static 'img/featur-1.jpg' %}" class="img-fluid rounded" alt="">
-                                            </div>
-                                            <div>
-                                                <h6 class="mb-2">Big Banana</h6>
-                                                <div class="d-flex mb-2">
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star"></i>
+                                        {% if vegetables %}
+                                            {% for vegetable in vegetables %}
+                                                <div class="d-flex align-items-center justify-content-start mb-2">
+                                                    <div class="rounded-circle" style="width: 100px; height: 100px;">
+                                                        <img src="{{ vegetable.product_image.url }}" class="img-fluid rounded-circle" alt="{{ vegetable.product_name }}">
+                                                    </div>
+                                                    <div>
+                                                        <h6 class="mb-2">{{ vegetable.product_name }}</h6>
+                                                        <div class="d-flex mb-2">
+                                                            <i class="fa fa-star text-secondary"></i>
+                                                            <i class="fa fa-star text-secondary"></i>
+                                                            <i class="fa fa-star text-secondary"></i>
+                                                            <i class="fa fa-star text-secondary"></i>
+                                                            <i class="fa fa-star"></i>
+                                                        </div>
+                                                        <div class="d-flex mb-2">
+                                                            <h5 class="fw-bold me-2">Sh{{ vegetable.product_price }}</h5>
+                                                            <h5 class="text-danger text-decoration-line-through">Sh100</h5>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
-                                                </div>
+                                            {% endfor %}
+                                        {% else %}
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <h6><i class="fa fa-database"></i> No products found</h6>
                                             </div>
-                                        </div>
-                                        <div class="d-flex align-items-center justify-content-start">
-                                            <div class="rounded me-4" style="width: 100px; height: 100px;">
-                                                <img src="{% static 'img/featur-2.jpg' %}" class="img-fluid rounded" alt="">
-                                            </div>
-                                            <div>
-                                                <h6 class="mb-2">Big Banana</h6>
-                                                <div class="d-flex mb-2">
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </div>
-                                                <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex align-items-center justify-content-start">
-                                            <div class="rounded me-4" style="width: 100px; height: 100px;">
-                                                <img src="{% static 'img/featur-3.jpg' %}" class="img-fluid rounded" alt="">
-                                            </div>
-                                            <div>
-                                                <h6 class="mb-2">Big Banana</h6>
-                                                <div class="d-flex mb-2">
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </div>
-                                                <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {% endif %}
                                         <div class="d-flex justify-content-center my-4">
-                                            <a href="#" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">View More</a>
+                                            <a href="{% url 'shop' %}" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">View More</a>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
