--- a/fruitable/web/templates/index.html
+++ b/fruitable/web/templates/index.html
@@ -393,11 +393,13 @@
                             <div class="col-6">
                                 <a href="#" class="h5">Organic {{ fruit.product_name }}</a>
                                 <div class="d-flex my-3">
-                                    <i class="fas fa-star text-primary"></i>
-                                    <i class="fas fa-star text-primary"></i>
-                                    <i class="fas fa-star text-primary"></i>
-                                    <i class="fas fa-star text-primary"></i>
-                                    <i class="fas fa-star"></i>
+                                    {% for i in "12345" %}
+                                        {% if forloop.counter <= fruit.get_average_rating %}
+                                            <i class="fa fa-star text-primary"></i>
+                                        {% else %}
+                                            <i class="fa fa-star"></i>
+                                        {% endif %}
+                                    {% endfor %}
                                 </div>
                                 <h4 class="mb-3">{{ fruit.product_price }} Sh</h4>
                                 <a href="{% url 'cart_add' fruit.id %}" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
@@ -416,11 +418,13 @@
                         <div class="py-4">
                             <a href="#" class="h5">Organic {{ vegetable.product_name }}</a>
                             <div class="d-flex my-3 justify-content-center">
-                                <i class="fas fa-star text-primary"></i>
-                                <i class="fas fa-star text-primary"></i>
-                                <i class="fas fa-star text-primary"></i>
-                                <i class="fas fa-star text-primary"></i>
-                                <i class="fas fa-star"></i>
+                                {% for i in "12345" %}
+                                    {% if forloop.counter <= vegetable.get_average_rating %}
+                                        <i class="fa fa-star text-primary"></i>
+                                    {% else %}
+                                        <i class="fa fa-star"></i>
+                                    {% endif %}
+                                {% endfor %}
                             </div>
                             <h4 class="mb-3">{{ vegetable.product_price }} Sh</h4>
                             <a href="{% url 'cart_add' vegetable.id %}" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
