--- a/fruitable/web/templates/shop-detail.html
+++ b/fruitable/web/templates/shop-detail.html
@@ -269,11 +269,13 @@
                                             <div>
                                                 <h6 class="mb-2">{{ fruit.product_name }}</h6>
                                                 <div class="d-flex mb-2">
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <i class="fa fa-star"></i>
+                                                    {% for i in "12345" %}
+                                                        {% if forloop.counter <= fruit.get_average_rating %}
+                                                            <i class="fa fa-star secondary"></i>
+                                                        {% else %}
+                                                            <i class="fa fa-star text-muted"></i>
+                                                        {% endif %}
+                                                    {% endfor %}
                                                 </div>
                                                 <div class="d-flex mb-2">
                                                     <h5 class="fw-bold me-2">Sh{{ fruit.product_price }}</h5>
