--- a/fruitable/web/templates/index.html
+++ b/fruitable/web/templates/index.html
@@ -375,7 +375,7 @@
   <!-- Banner Section End -->
   
   
-  <!-- Bestsaler Product Start -->
+  <!-- Bestseller Product Start -->
   <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="text-center mx-auto mb-5" style="max-width: 700px;">
