Made it possible to search for products

--- a/fruitable/web/templates/layout/base.html
+++ b/fruitable/web/templates/layout/base.html
@@ -53,7 +53,7 @@
                     <div class="modal-body d-flex align-items-center">
                         <div class="input-group w-75 mx-auto d-flex">
                             <input type="search" id="search-input" class="form-control p-3" placeholder="Enter keyword">
-                            <button id="search-button" class="btn btn-primary p-3">
+                            <button id="search-button" class="input-group-text p-3">
                                 <i class="fa fa-search"></i>
                             </button>
                         </div>
