Added error messages and modified icons

--- a/fruitable/web/templates/cart.html
+++ b/fruitable/web/templates/cart.html
@@ -126,7 +126,7 @@
                                         <p class="mb-0">Flat rate: Sh.{{ total_shipping_fee }}</p>
                                     </div>
                                 </div>
-                                <p class="mb-0 text-end">Shipping to Eldoret</p>
+                                <p class="mb-0 text-end">Free within Narok</p>
                             </div>
                             <div class="py-4 mb-4 border-top border-bottom d-flex justify-content-between">
                                 <h5 class="mb-0 ps-4 me-4">Total</h5>
